@@ -1666,5 +1666,12 @@
 
 6.2 2011-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
+	* arch/arm/src/lpc17xx/lpc17_gpioint.c: Correct errors in logic that maps
+	  and IRQ number into a register bit number.
+	* Makefile: Fix an error introduced in the top-level Makefile in NuttX-6.1.
+	  This error only shows up if you have a /tftpboot directory.  Then the 
+	  make will fail with an obscure error about not being able to stat pass2.
+
+
 
 
